2nd section done

--- a/index.html
+++ b/index.html
@@ -9,18 +9,73 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <nav>
-            <h2>Fitness</h2>
-            <div>
+            <h3 class="nav-title">Fitness</h3>
+            <div class="nav-items">
                 <h5>Home</h5>
                 <h5>Service</h5>
                 <h5>Contact</h5>
                 <h5>About</h5>
             </div>
         </nav>
+        <section class="header-info">
+            <!-- <div class="header-info-div"> -->
+            <div class="header-info-left">
+                <h1>Get body in <span>shape</span> & stay healthy</h1>
+                <p class="title-description">A huge selection of health and fitness content, healthy recipes and
+                    transformation stories to help
+                    you
+                    get fit and stay fit!</p>
+                <button>Join Club Now!</button>
+                <button>Download App</button>
+            </div>
+            <div class="header-info-right header-info-right ">
+                <!-- <div>
+                    <h3>500+</h3>
+                    <p>Free Workout Videos</p>
+                </div>
+                <div>
+                    <h3>350+</h3>
+                    <p>Video tutorial</p>
+                </div> -->
+            </div>
+            <!-- </div> -->
+
+        </section>
     </header>
-    <main></main>
+    <main>
+        <section class="container habits-section">
+            <h2 class="title">Change Your Habits</h2>
+            <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
+                regardless of
+                income or access to a gym.
+            </p>
+            <div class="habits">
+                <!-- .habit*4>img.habit-img+h4.habit-name+p.habit-description -->
+                <div class="habit">
+                    <img src="images/image 3.png" alt="" class="habit-img">
+                    <h4 class="habit-name">Movement</h4>
+                    <p class="title-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit">
+                    <img src="images/image 2.png" alt="" class="habit-img">
+                    <h4 class="habit-name">Time</h4>
+                    <p class="title-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit">
+                    <img src="images/image 4.png" alt="" class="habit-img">
+                    <h4 class="habit-name">Practice</h4>
+                    <p class="title-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit">
+                    <img src="images/image 5.png" alt="" class="habit-img">
+                    <h4 class="habit-name">Weight Loss</h4>
+                    <p class="title-description">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
