--- a/index.html
+++ b/index.html
@@ -9,74 +9,209 @@
 </head>
 
 <body>
-    <header class="container">
-        <nav>
-            <h3 class="nav-title">Fitness</h3>
-            <div class="nav-items">
-                <h5>Home</h5>
-                <h5>Service</h5>
-                <h5>Contact</h5>
-                <h5>About</h5>
-            </div>
-        </nav>
-        <section class="header-info">
-            <!-- <div class="header-info-div"> -->
-            <div class="header-info-left">
-                <h1>Get body in <span>shape</span> & stay healthy</h1>
-                <p class="title-description">A huge selection of health and fitness content, healthy recipes and
-                    transformation stories to help
-                    you
-                    get fit and stay fit!</p>
-                <button>Join Club Now!</button>
-                <button>Download App</button>
-            </div>
-            <div class="header-info-right header-info-right ">
-                <!-- <div>
-                    <h3>500+</h3>
-                    <p>Free Workout Videos</p>
+    <header>
+        <div class="container header-div">
+            <nav>
+                <h3 class="nav-title">Fitness</h3>
+                <div class="nav-items">
+                    <button id="orange-color">Home</button>
+                    <button>Service</button>
+                    <button>Contact</button>
+                    <button>About</button>
                 </div>
-                <div>
-                    <h3>350+</h3>
-                    <p>Video tutorial</p>
-                </div> -->
+            </nav>
+            <div class="header-info">
+                <div class="header-info-left">
+                    <h1>Get body in <span>shape</span> & stay healthy</h1>
+                    <p class="title-description">A huge selection of health and fitness content, healthy recipes and
+                        transformation stories to help
+                        you
+                        get fit and stay fit!</p>
+                    <button>Join Club Now!</button>
+                    <button>Download App</button>
+                </div>
+                <div class="header-info-right">
+                    <!-- <div>
+                        <h3>500+</h3>
+                        <p>Free Workout Videos</p>
+                    </div>
+                    <div>
+                        <h3>350+</h3>
+                        <p>Video tutorial</p>
+                    </div> -->
+                </div>
             </div>
-            <!-- </div> -->
-
-        </section>
+        </div>
     </header>
     <main>
-        <section class="container habits-section">
-            <h2 class="title">Change Your Habits</h2>
-            <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
-                regardless of
-                income or access to a gym.
-            </p>
-            <div class="habits">
-                <!-- .habit*4>img.habit-img+h4.habit-name+p.habit-description -->
-                <div class="habit">
-                    <img src="images/image 3.png" alt="" class="habit-img">
-                    <h4 class="habit-name">Movement</h4>
-                    <p class="title-description">We believe fitness should be accessible to everyone</p>
-                </div>
-                <div class="habit">
-                    <img src="images/image 2.png" alt="" class="habit-img">
-                    <h4 class="habit-name">Time</h4>
-                    <p class="title-description">We believe fitness should be accessible to everyone</p>
-                </div>
-                <div class="habit">
-                    <img src="images/image 4.png" alt="" class="habit-img">
-                    <h4 class="habit-name">Practice</h4>
-                    <p class="title-description">We believe fitness should be accessible to everyone</p>
-                </div>
-                <div class="habit">
-                    <img src="images/image 5.png" alt="" class="habit-img">
-                    <h4 class="habit-name">Weight Loss</h4>
-                    <p class="title-description">We believe fitness should be accessible to everyone</p>
+        <section class="dark-mood">
+            <div class="container habits-section">
+                <h2 class="title">Change Your Habits</h2>
+                <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of
+                    income or access to a gym.
+                </p>
+                <div class="habits">
+                    <!-- .habit*4>img.habit-img+h4.habit-name+p.habit-description -->
+                    <div class="habit">
+                        <img src="images/image 3.png" alt="" class="habit-img">
+                        <h4 class="habit-name">Movement</h4>
+                        <p class="title-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habit">
+                        <img src="images/image 2.png" alt="" class="habit-img">
+                        <h4 class="habit-name">Time</h4>
+                        <p class="title-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habit">
+                        <img src="images/image 4.png" alt="" class="habit-img">
+                        <h4 class="habit-name">Practice</h4>
+                        <p class="title-description">We believe fitness should be accessible to everyone</p>
+                    </div>
+                    <div class="habit">
+                        <img src="images/image 5.png" alt="" class="habit-img">
+                        <h4 class="habit-name">Weight Loss</h4>
+                        <p class="title-description">We believe fitness should be accessible to everyone</p>
+                    </div>
                 </div>
             </div>
         </section>
+        <section class="dark-mood">
+            <div class="container run-section">
+                <div>
+                    <h2 class="title">Run an Extra
+                        Mile Easily</h2>
+                    <p class="title-description">We believe fitness should be accessible to everyone, everywhere,
+                        regardless
+                        of income or access to a gym. With hundreds of professional workouts.</p>
+                    <button>Join Now</button>
+                </div>
+                <div class="run-img">
+                    <!-- <img  src="images/run.jpg" alt=""> -->
+                </div>
+            </div>
+        </section>
+        <section class="dark-mood">
+            <div class="container exercise-section">
+                <h2 class="title">Meet Our Team</h2>
+                <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
+                    regardless
+                    of income or access to a gym.</p>
+                <!-- <div class="excercises"> -->
+                <div class="row-1">
+                    <div class="excercise">
+                        <img src="images/exercise1.jpg" alt="">
+                        <!-- <h3>Jerome Bell</h3> -->
+                        <!-- <p>Trainer</p> -->
+                    </div>
+                    <div class="excercise">
+                        <img src="images/exercise2.png" alt="">
+                        <!-- <h3>Cameron Williamson</h3> -->
+                        <!-- <p>Trainer</p> -->
+                    </div>
+                    <div class="excercise">
+                        <img src="images/exercise3.png" alt="">
+                        <!-- <h3>Darrell Steward</h3> -->
+                        <!-- <p>Trainer</p> -->
+                    </div>
+                </div>
+                <div class="row-2">
+                    <div class="excercise">
+                        <img src="images/exercise4.png" alt="">
+                        <!-- <h3>Dianne Russell</h3> -->
+                        <!-- <p>Trainer</p> -->
+                    </div>
+                    <div class="excercise">
+                        <img src="images/exercise5.jpg" alt="">
+                        <!-- <h3>Cody Fisher</h3> -->
+                        <!-- <p>Trainer</p> -->
+                    </div>
+                    <div class="excercise">
+                        <img src="images/exercise6.jpg" alt="">
+                        <!-- <h3>Theresa Webb</h3> -->
+                        <!-- <p>Trainer</p> -->
+                    </div>
+                </div>
+                <!-- </div> -->
+            </div>
+            </div>
+        </section>
+        <section class="dark-mood">
+            <div class="container team-section">
+                <h2 class="title">Meet Our Team</h2>
+                <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
+                    regardless
+                    of income or access to a gym.</p>
+                <div class="team-members">
+                    <div class="member">
+                        <img src="images/trainer1.png" alt="">
+                        <h3>Jerome Bell</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="member">
+                        <img src="images/trainer2.png" alt="">
+                        <h3>Cameron Williamson</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="member">
+                        <img src="images/trainer3.png" alt="">
+                        <h3>Darrell Steward</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="member">
+                        <img src="images/trainer4.png" alt="">
+                        <h3>Dianne Russell</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="member">
+                        <img src="images/trainer5.png" alt="">
+                        <h3>Cody Fisher</h3>
+                        <p>Trainer</p>
+                    </div>
+                    <div class="member">
+                        <img src="images/trainer6.png" alt="">
+                        <h3>Theresa Webb</h3>
+                        <p>Trainer</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="footer-div">
+                <div class="div-1">
+                    <h2 class="title">Fitness</h2>
+                    <p class="title-description">We believe fitness should be accessible to everyone,
+                        everywhere,
+                        regardless
+                        of
+                        income or access to a gym. With hundreds of professional workouts.</p>
+                </div>
+                <div class="div-2">
+                    <div class="get-started">
+                        <h4>Get Started</h4>
+                        <p>Service</p>
+                        <p>Contact Us</p>
+                        <p>Affiliate Program</p>
+                        <p>About Us</p>
+                    </div>
+                    <div class="get-started">
+                        <h4>Get Started</h4>
+                        <p>Fitness</p>
+                        <p>Platform</p>
+                        <p>Workout Library</p>
+                        <p>App Design</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <p class="title-description footer-div-p">All right reserved @Fitness 2024</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
