--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
                         you
                         get fit and stay fit!</p>
                     <button>Join Club Now!</button>
-                    <button>Download App</button>
+                    <button class="download-button">Download App</button>
                 </div>
                 <div class="header-info-right">
-                    <!-- <div>
+                    <div class="workout-video">
                         <h3>500+</h3>
-                        <p>Free Workout Videos</p>
+                        <p class="title-description">Free Workout Videos</p>
                     </div>
-                    <div>
+                    <div class="tutorial-video">
                         <h3>350+</h3>
-                        <p>Video tutorial</p>
-                    </div> -->
+                        <p class="title-description">Video tutorial</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -93,53 +93,52 @@
         </section>
         <section class="dark-mood">
             <div class="container exercise-section">
-                <h2 class="title">Meet Our Team</h2>
+                <h2 class="title">Trainings and Exercises</h2>
                 <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
-                    regardless
-                    of income or access to a gym.</p>
-                <!-- <div class="excercises"> -->
+                    regardless of income or access to a gym.</p>
                 <div class="row-1">
-                    <div class="excercise">
+                    <div class="exercise-1">
                         <img src="images/exercise1.jpg" alt="">
-                        <!-- <h3>Jerome Bell</h3> -->
-                        <!-- <p>Trainer</p> -->
+                        <div class="gradient-1"></div>
+                        <!-- <p>Jerome Bell</p> -->
+                        <p>Push Up</p>
                     </div>
-                    <div class="excercise">
+                    <div class="exercise-2">
                         <img src="images/exercise2.png" alt="">
-                        <!-- <h3>Cameron Williamson</h3> -->
-                        <!-- <p>Trainer</p> -->
+                        <div class="gradient-2"></div>
+                        <p>Push Up</p>
                     </div>
-                    <div class="excercise">
+                    <div class="exercise-3">
                         <img src="images/exercise3.png" alt="">
-                        <!-- <h3>Darrell Steward</h3> -->
-                        <!-- <p>Trainer</p> -->
+                        <div class="gradient-3"></div>
+                        <p>Leg Press: Works the quadriceps and glutes</p>
                     </div>
                 </div>
                 <div class="row-2">
-                    <div class="excercise">
+                    <div class="exercise-4">
                         <img src="images/exercise4.png" alt="">
-                        <!-- <h3>Dianne Russell</h3> -->
-                        <!-- <p>Trainer</p> -->
+                        <div class="gradient-4"></div>
+                        <p>Leg Press: Works the quadriceps and glutes</p>
                     </div>
-                    <div class="excercise">
+                    <div class="exercise-5">
                         <img src="images/exercise5.jpg" alt="">
-                        <!-- <h3>Cody Fisher</h3> -->
-                        <!-- <p>Trainer</p> -->
+                        <div class="gradient-5"></div>
+                        <p>Leg Press: Works the quadriceps and glutes</p>
                     </div>
-                    <div class="excercise">
+                    <div class="exercise-6">
                         <img src="images/exercise6.jpg" alt="">
-                        <!-- <h3>Theresa Webb</h3> -->
-                        <!-- <p>Trainer</p> -->
+                        <div class="gradient-6"></div>
+                        <p>Leg Press: Works the quadriceps and glutes</p>
                     </div>
                 </div>
-                <!-- </div> -->
             </div>
-            </div>
+
         </section>
         <section class="dark-mood">
             <div class="container team-section">
                 <h2 class="title">Meet Our Team</h2>
-                <p class="title-description p-width">We believe fitness should be accessible to everyone, everywhere,
+                <p class="title-description p-width">We believe fitness should be accessible to everyone,
+                    everywhere,
                     regardless
                     of income or access to a gym.</p>
                 <div class="team-members">
@@ -174,9 +173,7 @@
                         <p>Trainer</p>
                     </div>
                 </div>
-
             </div>
-
         </section>
     </main>
     <footer>
