--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>versatile-ui-assign</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/9a8c31e657.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -18,6 +19,9 @@
                     <button>Service</button>
                     <button>Contact</button>
                     <button>About</button>
+                </div>
+                <div class="nav-bars">
+                    <i class="fa-solid fa-bars"></i>
                 </div>
             </nav>
             <div class="header-info">
@@ -36,8 +40,11 @@
                         <p class="title-description">Free Workout Videos</p>
                     </div>
                     <div class="tutorial-video">
-                        <h3>350+</h3>
-                        <p class="title-description">Video tutorial</p>
+                        <div class="red-circle"></div>
+                        <div>
+                            <h3>350+</h3>
+                            <p class="title-description">Video tutorial</p>
+                        </div>
                     </div>
                 </div>
             </div>
