just left BMI section

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </section>
         <section class="dark-mood">
             <div class="container run-section">
-                <div>
+                <div class="run-header">
                     <h2 class="title">Run an Extra
                         Mile Easily</h2>
                     <p class="title-description">We believe fitness should be accessible to everyone, everywhere,
@@ -149,7 +149,7 @@
                     regardless
                     of income or access to a gym.</p>
                 <div class="team-members">
-                    <div class="member">
+                    <div class="member" id="member-1">
                         <img src="images/trainer1.png" alt="">
                         <h3>Jerome Bell</h3>
                         <p>Trainer</p>
@@ -164,12 +164,12 @@
                         <h3>Darrell Steward</h3>
                         <p>Trainer</p>
                     </div>
-                    <div class="member">
+                    <div class="member" id="member-4">
                         <img src="images/trainer4.png" alt="">
                         <h3>Dianne Russell</h3>
                         <p>Trainer</p>
                     </div>
-                    <div class="member">
+                    <div class="member" id="member-5">
                         <img src="images/trainer5.png" alt="">
                         <h3>Cody Fisher</h3>
                         <p>Trainer</p>
