--- a/index.html
+++ b/index.html
@@ -142,6 +142,58 @@
 
         </section>
         <section class="dark-mood">
+            <div class="BMI-section-description">
+                <h2 class="title">BMI Calculator</h2>
+                <p class="title-description">We believe fitness should be accessible to everyone, everywhere,
+                    regardless of
+                    income or access to a gym.</p>
+            </div>
+            <div class="BMI-calculate-div">
+                <div class="container BMI-div">
+                    <div class="BMI-div-1">
+                        <h3>BMI Calculator Chart</h3>
+                        <table>
+                            <thead>
+                                <th>BMI</th>
+                                <th>Weight Status</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Below 18.5</td>
+                                    <td>Underweight</td>
+                                </tr>
+                                <tr>
+                                    <td>18.5 - 24.5</td>
+                                    <td>Healthy</td>
+                                </tr>
+                                <tr>
+                                    <td>25.0 - 29.9</td>
+                                    <td>Overweight</td>
+                                </tr>
+                                <tr>
+                                    <td>30.0 - and Above</td>
+                                    <td>Obese</td>
+
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="BMI-div-2">
+                        <h3>Calculate your BMI</h3>
+                        <p class="title-description">We believe fitness should be accessible to everyone, everywhere,
+                            regardless of
+                            income or access to a gym.</p>
+                        <input type="text" name="" id="" placeholder="Height/cm">
+                        <input type="text" name="" id="" placeholder="Weight/kg">
+                        <input type="text" name="" id="" placeholder="Age">
+                        <select name="" id="" aria-placeholder="Sex"></select>
+                        <select name="" id="" aria-placeholder=""></select>
+                        <button>Calculate</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="dark-mood">
             <div class="container team-section">
                 <h2 class="title">Meet Our Team</h2>
                 <p class="title-description p-width">We believe fitness should be accessible to everyone,
