--- a/index.html
+++ b/index.html
@@ -186,8 +186,14 @@
                         <input type="text" name="" id="" placeholder="Height/cm">
                         <input type="text" name="" id="" placeholder="Weight/kg">
                         <input type="text" name="" id="" placeholder="Age">
-                        <select name="" id="" aria-placeholder="Sex"></select>
-                        <select name="" id="" aria-placeholder=""></select>
+                        <select name="Sex" id="sex">
+                            <option value="Sex">Sex</option>
+                            <option value="">Male</option>
+                            <option value="">Female</option>
+                        </select>
+                        <select name="" id="activity">
+                            <option value="Select an activity factor">Select an activity factor</option>
+                        </select>
                         <button>Calculate</button>
                     </div>
                 </div>
