unique-section-add

--- a/index.html
+++ b/index.html
@@ -240,6 +240,33 @@
                 </div>
             </div>
         </section>
+        <section class="dark-mood">
+            <div class="container service-section">
+                <!-- <h2 class="title">Our Services</h2> -->
+                <div class="service-section-img">
+                    <img src="images/services.jpg" alt="">
+                </div>
+                <div class="cards-div">
+                    <div class="card-1">
+                        <h3>1-ON-1 TRAINING</h3>
+                        <p>ELITE, RESULTS BASED PERSONAL TRAINING SERVICES IN THE BOULDER, CO AREA</p>
+                        <button><a href="">Start Here</a></button>
+                    </div>
+                    <div class="card-2">
+                        <h3>ONLINE TRAINING</h3>
+                        <p>HIGHLY EFFECTIVE ONLINE STRENGTH AND CONDITIONING PROGRAMS FOR MEN & FEMALE</p>
+                        <button><a href="">Start Here</a></button>
+                    </div>
+                    <div class="card-3">
+                        <h3> CORPORATE FITNESS</h3>
+                        <p>CONSULT,DEVELOP AND SUPERVISE GROUP EXERCISE PROGRAMS FOR COMPANIES. </p>
+                        <button><a href="">Start Here</a></button>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+        </section>
     </main>
     <footer>
         <div class="container">
